--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Install dependencies with Composer
         run: |
           cd /home/runner/work/drupal_ci_test/drupal_ci_test/docroot
-          composer install --no-dev --optimize-autoloader
+          #composer install --no-dev --optimize-autoloader
 
       - name: Log in to Amazon ECR
         env:
